# thaler

./: .gitignore  Cargo.toml  README.md
benches/: bench_freivald.rs  bench_lagrange.rs  bench_lib.rs  bench_sumcheck.rs
src/: freivald.rs  lagrange.rs  lib.rs  sumcheck.rs
tests/: test_freivald.rs  test_lagrange.rs  test_lib.rs  test_sumcheck.rs
