[package]
name = "thaler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.0"
rand = "0.8.5"
ark-ff = "0.3.0"
ark-bls12-381 = "0.3.0"
ark-std = "0.3.0"
ark-poly = "0.3.0"

[dev-dependencies]
rstest = "0.12.0"
lazy_static = "1.4.0"